Bug 1089787 - Get glyph widths via Core Text for fonts with embedded color bitmaps. r=jdaggett